--- a/css/utils.css
+++ b/css/utils.css
@@ -23,8 +23,17 @@ h2{
 
 ul{
 	list-style: none;
+	min-height: 4rem;
+	max-height: 10rem;
+	overflow: auto;
 }
 
 #selected{
 	color: white;
+}
+
+.side-bar span,
+.side-bar li{
+	font-size: smaller;
+	color: #595959;
 }
